# camguard

./: .deepsource.toml  .editorconfig  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  DESCRIPTION.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO  TODO.rst  camguard.code-workspace  pyproject.toml  requirements_pc.txt  requirements_rpi.txt  settings.yaml  setup.cfg  sync_watch.sh
camguard/: cam_facade.py  camguard.py  gdrive_facade.py  gdrive_test.py  motionsensor_facade.py
camguard/cam/: cam_adapter.py  cam_facade.py
camguard/cam/tests/: test_cam_adapter.py  test_cam_facade.py
camguard/exceptions/: camguard_error.py  configuration_error.py  error.py  gdrive_error.py  input_error.py
camguard/gdrive/: gdrive_facade.py
camguard/gdrive/tests/: test_gdrive_facade.py
camguard/motionsensor/: motionsensor_adapter.py  motionsensor_facade.py
camguard/motionsensor/tests/: test_motionsensor_adapter.py  test_motionsensor_facade.py
camguard/tests/: test_camguard.py  test_gdrive_facade.py
docs/: cli.rst  conf.py  config.rst  index.rst  intro.rst  setup.rst
settings/: dummy.yaml  raspi.yaml
src/camguard/: __init__.py  __main__.py  bridge.py  bridge_api.py  bridge_impl.py  cam_facade.py  camguard.py  camguard_settings.py  dummy_cam.py  dummy_gdrive_storage.py  dummy_gpio_sensor.py  dummy_mail_client.py  dummy_mail_server.py  dummy_network_device_detector.py  errors.py  exceptions.py  extended_enum.py  file_storage_settings.py  gdrive_dummy_storage.py  gdrive_facade.py  gdrive_storage.py  gdrive_test.py  generic_mail_client.py  mail_client_settings.py  motion.py  motion_detector_settings.py  motion_handler_settings.py  motion_sensor.py  motionsensor_facade.py  network_device_detector_settings.py  nmap_device_detector.py  picam.py  raspi_cam.py  raspi_gpio_sensor.py  settings.py
src/camguard/certs/: __init__.py  dummy_mail.cert  dummy_mail.key
systemd/: camguard.service
tests/: test__init__.py  test__main__.py  test_bridge.py  test_bridge_api.py  test_cam_facade.py  test_camguard.py  test_camguard_settings.py  test_file_storage_settings.py  test_gdrive_facade.py  test_gdrive_storage.py  test_generic_mail_client.py  test_init.py  test_mail_client_settings.py  test_motion_detector_settings.py  test_motion_handler_settings.py  test_motion_sensor.py  test_motionsensor_facade.py  test_network_device_detector_settings.py  test_nmap_device_detector.py  test_picam.py  test_raspi_cam.py  test_settings.py
