[metadata]
name = camguard
version = attr: camguard.__version__
url = 
project_urls =
license = MIT 
license_files = LICENSE
author = matt-hires
author_email = camguard@matt-hires.at
description = Raspi surveillance system 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    # see https://pypi.org/classifiers/ for full list
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Raspi
    Development Status :: 1 - Planning 

[options]
packages = find:
package_dir = = src
install_requires =
    gpiozero
    pydrive
python_requires = >=3.7.3, <3.8
include_package_data = true

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    camguard = camguard:main

[options.extras_require]
raspi = 
    RPi.GPIO
    picamera
dev =
    autopep8
    tox

