[metadata]
name = camguard
version = attr: camguard.__version__
description = camguard - home surveillance system 
url = https://camguard.readthedocs.io/
project_urls =
    Bug Tracker = https://github.com/matt-hires/camguard/issues 
    Documentation = https://camguard.readthedocs.io/
    Source Code = https://github.com/matt-hires/camguard 
license = GNU General Public License v3.0 
license_files = LICENSE
author = matt-hires
author_email = camguard@matt-hires.at
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    # see https://pypi.org/classifiers/ for full list
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta

[options]
packages = find:
package_dir = = src
install_requires =
    gpiozero
    python-daemon
    pid
    pyyaml
    google-api-python-client 
    google-auth-httplib2 
    google-auth-oauthlib
    aiosmtpd
python_requires = >=3.7.3, <3.8
include_package_data = true

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    camguard = camguard:main

[options.extras_require]
raspi = 
    RPi.GPIO
    picamera
dev =
    autopep8
    coverage
    tox
    debugpy
    docutils <0.18 # limit docutils version for sphinx, due to python-daemon 
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    sphinxcontrib-autoprogram
    build
    twine
debug = 
    debugpy
